# TheEspada-HuecoEnv

./: .gitignore  Blog.MD  Dockerfile  README.md  hackathon_blog_post.md  hackathon_trl_template.py  inference.py  make_graph.py  openenv.yaml  plot_results.py  pyproject.toml  requirements.txt  run.bat  simulate.py  train.py  training_run.ipynb
agents/: __init__.py  allocator_agent.py  base_agent.py  critic_agent.py  llm_agent.py  producer_agent.py
data/: world_memory.json
env/: __init__.py  economy.py  environment_brain.py  huecoenv_env.py  models.py
hackathon/: blog_post.md  pitch_deck.md
server/: app.py  index.html
tasks/: graders.py  task_easy.py  task_hard.py  task_medium.py
